--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     padding: 0;
     box-sizing:  border-box;
 }
-html{
+/*html{
     scroll-behavior: smooth;
-}
+} */
 
 /* Navbar */
 
@@ -41,12 +41,12 @@ html{
 }
 #home::before{
          content: "";
-    position: absolute;
+    position: left;
     top: 0;
     right: 0;
-    background: url('./image/Background.jpg') no-repeat center center/cover;
-    height: 900px;
-    width: 100%;
+    background: url('./image/bi.png') no-repeat center center/cover;
+    height: 100%;
+    width: 50%;
     z-index: -1;
     opacity: .8;
 
@@ -173,15 +173,27 @@ span{
 }
 
 /* contact Section */
-#contact{
+section{
+    /*height: 100vh;
+    width: 100%;
+    background-color: aliceblue;
+    display: flex;
+    align-items: center; */
+    justify-content: center; 
+    flex-direction: column;
+
+}
+.contact-me{
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgb(0,0,0,0.5);
     color: white;
     padding: 20px;
 }
+
 .form{
+
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -194,6 +206,9 @@ span{
     width: 30%;
     border: none;
     outline: none;
+}
+textarea{
+    resize: vertical;
 }
 #msg{
     width: 20%;
@@ -214,4 +229,37 @@ span{
 
       cursor: pointer;
       box-shadow: 0 0 10px white;
+}
+
+#status{
+    width: 90%;
+    max-width: 500px;
+    text-align: center;
+    padding: 10px;
+    margin: 0 auto;
+    border-radius: 8px;
+
+}
+#status.success{
+    background-color: orange;
+    animation: status 4s ease forwards;
+}
+
+#status.error{
+    background-color: rgb(250, 129, 92);
+    animation: status 4s ease forwards;
+}
+@keyframes status{
+    0%{
+       opacity: 1;
+       pointer-events: all;
+   }
+    90%{
+    opacity: 1;
+    pointer-events: all;
+   }
+    100%{
+    opacity: 0;
+    pointer-events: none;
+   }
 }
